--- a/changelog
+++ b/changelog
@@ -1,19 +1,40 @@
 
-  <*> Bringup KnightWalker-ツバサ-Tsubasa</*>
-  <*> Merged Linux 4.19.246</*>
-  <*> Fixed CPU Temp Always Stuck at 37°C</*>
-  <*> Fixed Black Screen after ASUS Logo</*>
-  <*> Backported Interactive CPU Gov from Linux 4.14</*>
-  <*> Backported some drivers from Linux 5.4</*>
-  <*> Switched to PELT 16ms completely</*>
-  <*> Re-Enabled Polly Optimization with New Flags</*>
-  <*> Switched Back to SCHED_FIFO for Scheduler</*>
-  <*> msm: kgsl: use kmem_cache pool for draw objects</*>
+  <*> Bringup KnightWalker-ハヤト-Hayato</*>
+  <*> Merged Linux 4.19.247~248</*>
+  <*> Merged CLO LA.UM.10.2.r1-03800-sdm660.0 for Audio, Wifi, and Treewide</*>
+  <*> ARM64: sdm636: Recalculate Energy Model</*>
+  <*> Added Simple Thermal from msm-4.14 with Toggle</*>
+  <*> Switched to Simple Low Memory Killer</*>
+  <*> [OC] Re-Overclock CPU & GPU</*>
+  <*> Fixed IO Scheduler not change when switching spectrum profile</*>
+  <*> f2fs: Upstreamed from Google Source</*>
+  <*> f2fs/gc: Reduce GC thread urgent sleep time to 50ms</*>
+  <*> sdfat: Import v2.4.5 and use for VFAT</*>
+  <*> random: Switched to qcom-prng and disable SRANDOM</*>
+  <*> TCP: Enable ECN Negotiation by default</*>
+  <*> KSM: Switched to Ultra KSM, Tuned and Enabled by Default</*>
+  <*> ashmem: Rewrite to Improve clarity and performance</*>
+  <*> locking/osq: Use optimized spinning loop for arm64</*>
+  <*> sched{util,horizon}: Tuned Up and Down Rate Limit</*>
+  <*> Deep Sleep Improved</*>
+  <*> Migrated some Drivers Initialization to Asynchronous Probe</*>
+  <*> Completely disable CPU ISOLATION ( Fixed Unwanted Throttling )</*>
+  <*> drivers: Properly enable asus_lcd_early_unblank_func for X00TD</*>
+  <*> X00TD: cdfinger_fp: Update Driver from X01BD (Fix some issue)</*>
+  <*> X00TD: NVT_Touch: Update M & O Screen-Off Gestures Keycode and Debloat Driver</*>
+  <*> power: Use sec_access value from 4.4 kranul</*>
+  <*> crypto/lzo: Updated and Separated LZO-RLE</*>
+  <*> zram: Set LZO-RLE as default Compression Algorithm</*>
+  <*> AK3: Updated Magisk Tools to v25.1</*>
   <*> More Details, see on GitHub Commits</*>
 
 
-
 <b><#selectbg_g>NOTES :</#></b>
+
+  <*> U can toggle Simple Thermal by using FKM Custom Tunables or Terminal,
+      Just Set N to Disable and Y to Enable. Example:</*>
+
+    echo N > /sys/module/msm_thermal_simple/parameters/enable
 
   <*> Better to not use phone while charging.</*>
   <*> Kernel need sometimes to settle.</*>
