Bringup KnightWalker-ハヤト-Hayato-X
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+<b><#selectbg_g>August 8,2022</#></b>
+
+  <*> Bringup KnightWalker-ハヤト-Hayato-X</*>
+  <*> Fixed File Corruptions on Android 12</*>
+
+
+<b><#selectbg_g>July 2,2022</#></b>
 
   <*> Bringup KnightWalker-ハヤト-Hayato</*>
   <*> Merged Linux 4.19.247~248</*>
